# small_song_project

./: .gitignore  agent_state.json  extracted_data.json  index.js  main.js  main.py  package.json  pyproject.toml  requirements.txt  song_project.css  song_project.html  song_project.js  song_project.py
api/route/: card_route.py  casino_route.py  image_extract_route.py  music_route.py  pet_route.py  shop_route.py  user_name_route.py
core/: lifespan.py
domain/: Error.py  Schema.py
infrastructure/: model_cilent.py  mongo_DB.py  socketio.py
repositories/: agent_repository.py  card_repository.py  casino_repository.py  checking_data_repository.py  emotional_repository.py  image_repository.py  music_repository.py  music_shard_repository.py  pet_repository.py  shop_repository.py  user_repository.py
service/: card_service.py  casino_service.py  console_sub_service.py  data_extractor_service.py  handling_return.py  image_service.py  main_extractor_service.py  music_service.py  pet_service.py  random_recommend_service.py  random_recommender_service.py  shop_service.py  song_recommendation_service.py  testing_service.py  user_service.py  voice_service.py
